Fri Feb 27 16:39:34 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* md.c (md_enable): No init if called twice.

Thu Feb 26 07:57:02 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* primegen.c (generate_elg_prime): Changed the progress printing.
	(gen_prime): Ditto.

Tue Feb 24 12:28:42 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* md5.c, md.5 : Replaced by a modified version of md5.c from
	GNU textutils 1.22.

Wed Feb 18 14:08:30 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* md.c, md.h : New debugging support

Mon Feb 16 10:08:47 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* misc.c (cipher_algo_to_string): New
	(pubkey_algo_to_string): New.
	(digest_algo_to_string): New.

